// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with border 1`] = `
<NavLink
  className="MuiButtonBase-root-16 MuiButton-root-1 NavButton bordered"
  exact={true}
  href={undefined}
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="button"
  tabIndex={0}
  to="/test"
>
  <span
    className="MuiButton-label-2"
  >
    <div
      className="link-text"
    >
      Click me
    </div>
  </span>
  <span
    className="MuiTouchRipple-root-18"
  />
</NavLink>
`;

exports[`renders without border 1`] = `
<NavLink
  className="MuiButtonBase-root-16 MuiButton-root-1 NavButton "
  exact={true}
  href={undefined}
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="button"
  tabIndex={0}
  to="/test"
>
  <span
    className="MuiButton-label-2"
  >
    <div
      className="link-text"
    >
      Click me
    </div>
  </span>
  <span
    className="MuiTouchRipple-root-18"
  />
</NavLink>
`;
